--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /pirRemoteLowPowerTrasmission/pirRemoteLowPowerTrasmission.vcxproj.user
 /pirRemoteLowPowerTrasmission/pirRemoteLowPowerTrasmission.vcxproj.filters
 /.vs
+/receiverSample/Debug
