--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 /pirRemoteLowPowerTrasmission/pirRemoteLowPowerTrasmission.vcxproj.filters
 /.vs
 /receiverSample/Debug
+/pirRemoteLowPowerTrasmissionForVacation/Debug
+/pirRemoteLowPowerTrasmissionForVacation/src
+/pirRemoteLowPowerTrasmissionForVacation/__vm
